First bulk commit to deliver

--- a/angular.json
+++ b/angular.json
@@ -124,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "contact-app"
+    }
+  },
+  "defaultProject": "contact-app",
+  "cli": {
+    "analytics": false
+  }
 }
